src/pages/feedbacks/DetailPage/components/CommentList/replyForm.style.scss
@use "sass:map";
@use "@/sass/abstract" as *;

.reply-form {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-top: 16px;

  &__btn-wrapper {
    display: flex;
    justify-content: flex-end;
    width: 100%;
    min-width: 106px;
  }

  textarea {
    min-height: 80px;
    flex-grow: 1;
  }

  @include md {
    align-items: center;
    flex-direction: row;
    gap: 16px;

    &__btn-wrapper {
      width: auto;
    }
  }
}

